criacao de arquivo para teste de git

--- a/html/teste-git.html
+++ b/html/teste-git.html
@@ -1,3 +1,5 @@
 Este é apenas um arquivo de teste para testar o GIT.
 
 Não coloquei nem cabeçalho, nem nada. A ideia é apenas testas o GIT.
+
+Um novo teste
