refacao em gitignore e  head em teste-git

--- a/html/teste-git.html
+++ b/html/teste-git.html
@@ -1,5 +1,18 @@
-Este é apenas um arquivo de teste para testar o GIT.
+<!DOCTYPE html>
+<html lang="pt-br">
 
-Não coloquei nem cabeçalho, nem nada. A ideia é apenas testas o GIT.
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <title>Aula 09 &bull; Deus no Controle &bull; Página Inicial</title>
+    </head>
 
-Um novo teste
+    <body>
+        <p>
+            Este é apenas um arquivo de teste para testar o GIT.
+            Não coloquei nem cabeçalho, nem nada. A ideia é apenas testas o GIT.
+            Um novo teste.
+        </p>
+</body>
+</html>
