--- a/aula 11/first-in-inbound/index.html
+++ b/aula 11/first-in-inbound/index.html
@@ -47,19 +47,22 @@
     <section id="blog">
         <div class="container">
             <div id="sidebar">
+                <h3>
+                    Últimas do Blog!
+                </h3>
                 <nav id="sidebar_menu">
                     <ul>                        
                         <li>
-                            <a href="./empresa.html">Texto #1 do blog</a>
+                            <a href="#">Texto #1 do blog</a>
                         </li>
                         <li>
-                            <a href="./produtos.html">Texto #2 do blog</a>
+                            <a href="#">Texto #2 do blog</a>
                         </li>
                         <li>
-                            <a href="./servicos.html">Texto #3 do blog</a>
+                            <a href="#l">Texto #3 do blog</a>
                         </li>
                         <li>
-                            <a href="./contato.html">Texto #4 do blog</a>
+                            <a href="#">Texto #4 do blog</a>
                         </li>
                     </ul>
                 </nav>
