fluxo total exercicio 12

--- a/aula 11/first-in-inbound/hot-promo.html
+++ b/aula 11/first-in-inbound/hot-promo.html
@@ -23,21 +23,21 @@
     <header id="home-top">
         <div class="container">                
             <div id="logo">
-                <a href="./index.html"><img alt="Nome da Empresa" src="./images/logo-first-in-inbound.png"></a>
+                <a href="#"><img alt="Nome da Empresa" src="./images/logo-first-in-inbound.png"></a>
             </div>
             <nav id="topo">
                 <ul>                        
                     <li>
-                        <a href="#">Quem somos</a>
+                        <a href="#hot-nossa-empresa">Quem somos</a>
                     </li>
                     <li>
-                        <a href="#">Diferenciais</a>
+                        <a href="#hot-destaques">Diferenciais</a>
                     </li>
                     <li>
-                        <a href="#">FAQ</a>
+                        <a href="#faq">FAQ</a>
                     </li>
                     <li>
-                        <a href="#">Faça a Experiência</a>
+                        <a href="#power_form">Faça a Experiência</a>
                     </li>
                 </ul>
             </nav>
@@ -56,24 +56,24 @@
 
     <section id="hot-nossa-empresa">
         <div class="container">
-            Somos líders no segmento e asism por diante , um pequeno texto de duas a três linas
+            <p>Uma grande vitrine para você, que é produtor de conteúdo e um excelente catálogo para os compradores. Com nossas ferramentas integradas, você tem liberdade para focar no seu conteúdo e fazê-lo ir mais longe.</p>
         </div>
     </section>
 
     <section id="hot-destaques">
         <div class="container">
             <div class="hot-small-box">
-                <span>Favicon</span>
+                <img src="./images/icon-featured-a.jpg">
                 <h3>Audiência Qualificada</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
             </div>
             <div class="hot-small-box">
-                <span>Favicon</span>
+                <img src="./images/icon-featured-b.jpg">
                 <h3>Layout Responsivo</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
             </div>
             <div class="hot-small-box">
-                <span>Favicon</span>
+                <img src="./images/icon-featured-c.jpg">
                 <h3>Destaque seu negócio</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
             </div>
@@ -82,14 +82,26 @@
 
     <section id="faq">
         <div class="container">
-            FAQ
+            <h2>Perguntas Frequentes - FAQ</h2>
+            <dl>
+                <dt>Meu site vai aparecer nas primerias posições, nas buscas no Google?</dt>
+                    <dd>Aplicamos detalhadamente os principais recursos da arquitetura da informação. Além disso, todo o site é otimizado para que as principais ferramentas de buscas localizem e exibam seu site.</dd>
+                <dt>Meu site não está com uma boa posição no Google. O que posso fazer?</dt>
+                    <dd>Verique se colocou na sua landing page e no conteúdo em seu blog, os termos de buscas mais relevantes e buscados por seus usuários.</dd>
+                <dt>Meu site não está com uma boa posição no Google. O que posso fazer?</dt>
+                    <dd>Verique se colocou na sua landing page e no conteúdo em seu blog, os termos de buscas mais relevantes e buscados por seus usuários.</dd>
+                <dt>Quero trocar o layout da minha landing. Como faço?</dt>
+                    <dd>Acesse nossa galeria de temas, seiga os passos para instação. Em seguida, seu novo tempo já será exibido, substituindo o anterior.</dd>
+                <dt>O site já vem om o certificado de "site seguro" instalado?</dt>
+                    <dd>Não. Porém, obter um é muito simples. Acesse o painel de controle, clique em "Certificado SSL" e Nossa equipe fará todo o procedimento de instalação do certificado</dd>
+            </dl>
         </div>
     </section>
 
     <section id="power_form">
         <div class="container">
-            <h2>Quer receber 1 ano de conteúdo exclusivo totalmente grátis?!</h2>
-            <p>Preencha o formulário abaixo e concorra.</p>
+            <h2>Contrate agora e ganhe 1 ano de certificado SSL GRÁTIS!</h2>
+            <p>Preencha o formulário abaixo e aguarde nosso retorno.</p>
             <script src="https://www.cognitoforms.com/f/seamless.js" data-key="cEf1HFgN-Eu8_cND6Rc5SQ" data-form="1"></script>
         </div>
     </section>
