--- a/aula 11/first-in-inbound/newsletter-promo-first.html
+++ b/aula 11/first-in-inbound/newsletter-promo-first.html
@@ -36,23 +36,23 @@
         <thead style="background-color: #222; color: #ffbe00;">
             <tr style="display: flex; padding: 15px; margin-bottom: 0;">
                 <td style="width: 50%;text-align: left; margin-bottom: 0;">
-                    <img style="width: 25px; height: auto; text-align: left; margin-right: 5px; margin-bottom: 0;" alt="Nome da Empresa" src="./images/favicon-logo-first.png"> <span style="vertical-align: super;">First in Inbound</span>
+                    <a style="text-decoration: none; color: #ffbe00;" href="https://internetbyexacta.com.br/ebac/engenheiro-frontend/aula-11/first-in-inbound/hot-promo.html" target="_blank"><img style="width: 25px; height: auto; text-align: left; margin-right: 5px; margin-bottom: 0;" alt="Nome da Empresa" src="https://internetbyexacta.com.br/ebac/engenheiro-frontend/aula-11/first-in-inbound/images/favicon-logo-first.png"> <span style="vertical-align: super;">First in Inbound</span></a>
                 </td>
                 <td style="width: 50%; text-align: right; margin-bottom: 0;">
-                    <span style="vertical-align: sub;">Tel.: 11 98765-4321</span>
+                    <a style="vertical-align: sub; text-decoration: none; color: #ffbe00;" href="tel:11987654321">Tel.: 11 98765-4321</a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a style="display: grid; margin: 0;" href="#"><img style="margin: 0;" alt="Nome da Empresa" src="./images/capa-newsletter.jpg"></a>
+                    <a style="display: grid; margin: 0;" href="https://internetbyexacta.com.br/ebac/engenheiro-frontend/aula-11/first-in-inbound/index.html" target="_blank"><img style="margin: 0;" alt="Nome da Empresa" src="https://internetbyexacta.com.br/ebac/engenheiro-frontend/aula-11/first-in-inbound/images/capa-newsletter.jpg"></a>
                 </td>
             </tr>
         </thead>
         <tbody>
             <tr>            
                 <td style="padding: 30px 30px 0;">
-                    <h2 style="font-size: 22px; color: #ff9900; line-height: 28px;">
-                        Em ações B2B, o receptor pode ser o lead, o prospect ou o cliente. Em qualquer uma destas opções, ele deve compreender claramente:
+                    <h2 style="font-size: 22px; line-height: 28px;"><a style="text-decoration: none; color: #ff9900;" href="https://internetbyexacta.com.br/ebac/engenheiro-frontend/aula-11/first-in-inbound/index.html" target="_blank">
+                        Em ações B2B, o receptor pode ser o lead, o prospect ou o cliente. Em qualquer uma destas opções, ele deve compreender claramente:</a>
                     </h2>
                     <p>Os benefícios que terá ao adquirir um produto ou serviço; quem é a empresa fabricante, distribuidora ou revendedora; como receber ou retirar, no caso de produto; como o serviço será executado ou prestado, exemplo, se na própria empresa ou servidor na nuvem; prazo de garantia; como proceder em caso de troca ou desistência do serviço; quais os canais de atendimento ao cliente para suporte, financeiro, dúvidas, reclamações e ouvidoria; formas de pagamento; mensalidades, em caso de contratação de serviço; entre outros.
                     </p>
@@ -67,14 +67,14 @@
                     <h2 style="font-size: 22px; color: #ff9900; line-height: 28px;">
                         Converse com um de nossos analistas!
                     </h2>
-                    <span style="background-color: #ff9900; color: #fff; padding: 10px 16px; border-radius: 8px; display: inline-block;">Agende aqui</span>
+                    <a style="background-color: #ff9900; color: #fff; padding: 10px 16px; border-radius: 8px; display: inline-block; text-decoration: none;" href="https://internetbyexacta.com.br/ebac/engenheiro-frontend/aula-11/first-in-inbound/index.html#power_form" target="_blank">Agende aqui</a>
                 </td>
             </tr>
         </tbody>
         <tfoot style="background-color: #f5f5f5;">
             <tr>
                 <td style="border-top: 1px solid #ccc; padding-top: 45px; padding-bottom: 30px;">
-                    <a href="#"><img style="width: 125px; height: auto;" alt="Nome da Empresa" src="./images/logo-first-in-inbound.jpg"></a>
+                    <a href="https://internetbyexacta.com.br/ebac/engenheiro-frontend/aula-11/first-in-inbound/hot-promo.html" target="_blank"><img style="width: 125px; height: auto;" alt="Nome da Empresa" src="https://internetbyexacta.com.br/ebac/engenheiro-frontend/aula-11/first-in-inbound/images/logo-first-in-inbound.jpg"></a>
                     <p style="margin-top: 5px;">Soluções em captação de leads</p>
                     <p>Mais info em contato@firstininbound.com</p>
                 </td>
