puxa vida agora finalizou mesmo exercicio 12

--- a/aula 11/first-in-inbound/hot-promo.html
+++ b/aula 11/first-in-inbound/hot-promo.html
@@ -49,7 +49,7 @@
             <div class="banner_text">
                 <h2>Quem não é visto, não é lembrado!</h2>
                 <p>Indicação é tudo. Será que sua empresa será recomendada quando perguntarem sobre seus serviços?</p>
-                <a href="#power_form" target="_blank"><span>Quero estar em primeiro</span></a>                
+                <a href="#power_form"><span>Quero estar em primeiro</span></a>                
             </div>            
         </div>
     </section>
